Bizfi Production/src/objects/Lead.object
<CustomObject>
    <fields>
        <fullName>Ad_Campaign__c</fullName>
        <label>Ad Campaign</label>
        <length>160</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ad_Group__c</fullName>
        <label>Ad Group</label>
        <length>160</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ad_Position__c</fullName>
        <label>Ad Position</label>
        <length>160</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Amount_on_Check__c</fullName>
        <label>Amount on Check</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Amt_Monthly_Bank_Deposits__c</fullName>
        <label>$ Monthly Bank Deposits</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Authorize_Run_Credit_Owner_2__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Authorize Run Credit Owner 2</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Authorize_Run_Credit_Owner_3__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Authorize Run Credit Owner 3</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Authorize_Run_Credit_Owner_4__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Authorize Run Credit Owner 4</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Authorize_Run_Credit__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Authorize Run Credit Owner 1</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BDM__c</fullName>
        <formula>IF( NOT ( ISPICKVAL ( MCACE__ISO_1__r.BDM__c , &quot;&quot; ) ) , TEXT ( MCACE__ISO_1__r.BDM__c ), IF ( NOT ( ISPICKVAL (  MCACE__ISO_2__r.BDM__c , &quot;&quot; ) ) , TEXT ( MCACE__ISO_2__r.BDM__c ) , IF ( NOT ( ISPICKVAL ( MCACE__ISO_3__r.BDM__c , &quot;&quot; ) ) , TEXT ( MCACE__ISO_3__r.BDM__c ) , IF ( NOT ( ISPICKVAL (  MCACE__ISO_4__r.BDM__c , &quot;&quot; ) ) , TEXT ( MCACE__ISO_3__r.BDM__c ) , &quot;&quot; ))))</formula>
        <label>BDM</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Business_Contact_Account_2__c</fullName>
        <label>Business Contact/Account # 2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Business_Contact_Account_3__c</fullName>
        <label>Business Contact/Account # 3</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Business_Contact_Account__c</fullName>
        <label>Business Contact/Account</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Business_Email__c</fullName>
        <label>Business Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Business_Main_Phone__c</fullName>
        <label>Owner 1 Direct Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Business_Phone_2__c</fullName>
        <label>Business Phone # 2</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Business_Phone_3__c</fullName>
        <label>Business Phone # 3</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Business_Phone__c</fullName>
        <label>Business Phone #</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Call_Path_All__c</fullName>
        <description>Checks Campaign Source and populates Call Path ID if matched.</description>
        <formula>CASE( Campaign_Source__c,
 &quot;ACD: BizFi Var70 9.11.15&quot;, 179846,
 &quot;ACD: Experian Mail 8.31.15&quot;, 179846,
 &quot;ACD: Generic Var35 7.24.15&quot;, 179846,
 &quot;ACD: Meridian 6.09.15 Generic&quot;, 179846,
 &quot;ACD: Meridian 8.31.15 GenVar70&quot;, 179846,
 &quot;ACD: Meridian 9.08.15 GenVar70&quot;, 179846,
 &quot;ACD: Meridian Gear Check35 7.6.15&quot;, 179846,
 &quot;ACD: Meridian Generic Variable 8.1.15&quot;, 179846,
 &quot;ACD: Meridian Generic Variable35 7.13.15&quot;, 179846,
 &quot;ACD: Meridian Generic Variable35 7.6.15&quot;, 179846,
 &quot;ACD: Meridian Generic Variable70 8.7.15&quot;, 179846,
 &quot;ACD: Meridian New Content Variable35 7.13.15&quot;, 179846,
 &quot;ACD: Meridian Generic Variable35 7.6.15&quot;, 179846,
 &quot;ACD: Meridian Generic Variable70 8.7.15&quot;, 179846,
 &quot;ACD: Meridian New Content Variable35 7.13.15&quot;, 179846,
 &quot;ACD: Meridian Variable New Content 8.1.15&quot;, 179846,
 &quot;ACD: TheTopTens.com&quot;, 179846,
 &quot;ACD: UCC Mail 8.31.15&quot;, 179846,
 &quot;ACD: UCC Mail 9.08.15&quot;, 179846,
 &quot;ACD: WorkingCapitalDept.Com (no tracking code)&quot;, 179846,
 &quot;Blue Global&quot;, 179846,
 &quot;BlueGlobal2&quot;, 179846,
 &quot;Blue Global 3.U25&quot;, 179846,
 &quot;Blue Global-SC 10-30&quot;, 179846,
 &quot;Blue Global-SC 30-75&quot;, 179846,
 &quot;Blue Global-SC 75 plus&quot;, 179846,
 &quot;Blue Global-SC U10&quot;, 179846,
 &quot;Business Advance Funding&quot;, 179846,
 &quot;E-DIREX&quot;, 179846,
 &quot;EZPaydayCash&quot;, 179846,
 &quot;GETNLF.com MEGAMAILCPU51.1.15&quot;, 179846,
 &quot;GONLF.com SDPMAILU51.1.15&quot;, 179846,
 &quot;GoMCC.com&quot;, 179846,
 &quot;LendVantage&quot;, 179846,
 &quot;LendVantagePreQual&quot;, 179846,
 &quot;MerchantEdge&quot;, 179846,
 &quot;MERCHANT QUEST&quot;, 179846,
 &quot;MVF Global&quot;, 179846,
 &quot;NLFNOW.com MEGAMAILCPS-1M-1.1.15&quot;, 179846,
 &quot;NSBOA&quot;, 179846,
 &quot;Onlybusinessloans.com&quot;, 179846,
 &quot;PAYVANA&quot;, 179846,
 &quot;SCORES MEDIA GROUP&quot;, 179846,
 &quot;SELLING SOURCE DIRECT&quot;, 179846,
 &quot;TheTopTens.com&quot;, 179846,
 NULL)</formula>
        <label>Call Path - All</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Call_Path_Closer__c</fullName>
        <description>Checks Campaign Source and Populates Call Path ID if matched.</description>
        <formula>CASE( Campaign_Source__c,
 &quot;ASAPBusinessCash.com - Experian Mail&quot;, 179642,
 &quot;Lendonomics (digitize)&quot;, 179642,
 &quot;MCC MOBILE APP&quot;, 179642,
 &quot;MCC WEB SITE&quot;, 179642,
 &quot;MCC Website 2&quot;, 179642,
 &quot;NLF WEBSITE&quot;, 179642,
 &quot;XPEDITE WEB LEADS&quot;, 179642,
 NULL)</formula>
        <label>Call Path - Closer</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Call_Path_Id__c</fullName>
        <description>Checks values of Call Path fields and takes non-null value.</description>
        <formula>/* WARNING: Formula Return Type MUST be Text.  DO NOT CHANGE.
   Update table below as exceptions are added */
/*
Rep Queue ID     Call Path Name
180218           Open - New Lead ResponsePop - Opener
180290           Cust - Bizfi2
179228           Cust - Bizfi Espanol
179642           Close - New Lead ResponsePop - Closer
180104           Cust - PTIN
179748           Cust - Credit Karma
179912           Cust - Delivery.com
180124           Cust - Xero
180022           Cust - NYSRA
180298           Cust - National Benefits Program
179756           Cust - Lightspeed
180052           Cust - Profitstars
180212           Cust - TouchSuite
180310           Cust - Transfirst
180294           Cust - ConEd
179882           Cust - Credico
179960           Cust - Illinois Restaurant Association
180010           Cust - Nav Marketplace
190064           Cust - Doctor&apos;s Funding Group
7976             Test Call Path
*/


IF( AND( Campaign_Source__c = &quot;BizFi&quot;,  FirstName = &quot;valerie&quot;, LastName = &quot;papa&quot; ), &quot;7976&quot;,

IF( OR( ISPICKVAL (  LeadSource , &quot;Data Source&quot; ), ISPICKVAL (  LeadSource , &quot;Hybrid Lead Partner&quot; ), ISPICKVAL (  LeadSource , &quot;Hybrid Submission Partner&quot; ), ISPICKVAL (  LeadSource , &quot;Mailer&quot; ), ISPICKVAL (  LeadSource , &quot;Other&quot; )), &quot;180218&quot;, 

IF( Campaign_Source__c = &quot;5linx&quot;, &quot;179642&quot;,

IF( Campaign_Source__c = &quot;Doctors Funding Group&quot;, &quot;190064&quot;,

IF( OR ( Campaign_Source__c = &quot;ACD: Bizfi2&quot;, Campaign_Source__c = &quot;Bizfi2&quot; ), &quot;180290&quot;,

IF( OR ( Campaign_Source__c = &quot;ACD: Bizfi Espanol&quot;, Campaign_Source__c = &quot;BizfiEspanol&quot; ), &quot;179228&quot;,

IF( OR ( ISPICKVAL ( LeadSource, &quot;Digital&quot; ), CONTAINS ( Campaign_Source__c, &quot;Prosper&quot; ), CONTAINS ( Campaign_Source__c, &quot;MVF Global&quot; ) ), &quot;179642&quot;,

IF( CONTAINS ( Campaign_Source__c , &quot;PTIN&quot; ), &quot;180104&quot;, 

IF( CONTAINS ( Campaign_Source__c, &quot;Karma&quot; ), &quot;179748&quot;,

IF( CONTAINS ( Campaign_Source__c, &quot;delivery&quot; ), &quot;179912&quot;,

IF( CONTAINS ( Campaign_Source__c, &quot;Xero&quot; ), &quot;180124&quot;,

IF( CONTAINS ( Campaign_Source__c, &quot;NYSRA&quot; ), &quot;180022&quot;,

IF( CONTAINS ( Campaign_Source__c, &quot;National Benefit&quot; ), &quot;180298&quot;,

IF( CONTAINS ( Campaign_Source__c, &quot;Lightspeed&quot; ), &quot;179756&quot;,

IF( CONTAINS ( Campaign_Source__c, &quot;Profit&quot; ), &quot;180052&quot;,

IF( CONTAINS ( Campaign_Source__c, &quot;TouchSuite&quot; ), &quot;180212&quot;,

IF( CONTAINS ( Campaign_Source__c, &quot;Transfirst&quot; ), &quot;180310&quot;,

IF( CONTAINS ( Campaign_Source__c, &quot;ConEd&quot; ), &quot;180294&quot;,

IF( OR ( CONTAINS ( Campaign_Source__c, &quot;Credico&quot; ), Campaign_Source__c = &quot;SalesTeam&quot; ), &quot;179882&quot;,

IF( CONTAINS ( Campaign_Source__c, &quot;Illinois Restaurant&quot; ), &quot;179960&quot;,

IF( OR ( CONTAINS ( Campaign_Source__c, &quot;Creditera&quot; ), CONTAINS ( Campaign_Source__c, &quot;Nav Direct&quot; ), CONTAINS ( Campaign_Source__c, &quot;Nav Market&quot; ), CONTAINS ( Campaign_Source__c, &quot;Nav Live&quot; ), CONTAINS ( Campaign_Source__c, &quot;Nav Referral&quot; ) ), &quot;180010&quot;,

IF( OR ( Campaign_Source__c = &quot;ACD: Connexions&quot;, Campaign_Source__c = &quot;ACD: Conexus&quot;, CONTAINS ( Campaign_Source__c, &quot;Trafficjamming&quot; ) , CONTAINS ( Campaign_Source__c, &quot;Rev Funding&quot; ), ISPICKVAL ( LeadSource, &quot;Lead Partner&quot; ), ISPICKVAL ( LeadSource, &quot;Lead Source&quot; ) ), &quot;180218&quot;,

NULL))))))))))))))))))))))</formula>
        <label>Call Path Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Call_Path_Opener__c</fullName>
        <description>Checks Campaign Source and populates Call Path ID if matched</description>
        <formula>CASE( Campaign_Source__c,
 &quot;Business.com Leads&quot;, 180218,
 &quot;Community Care Call Center&quot;, 180218,
 &quot;CompanyLoansDirect.com&quot;, 180218,
 &quot;INSIDEUP&quot;, 180218,
 &quot;LENDIO&quot;, 180218,
 &quot;MERCHANT ADVISORS&quot;, 180218,
 &quot;Merchant Advisors 2&quot;, 180218,
 &quot;OneParkFinancial.com&quot;, 180218,
 &quot;Prosper&quot;, 180218,
 &quot;RADIANCE CALL CENTER&quot;, 180218,
 &quot;SUBLIMEFIND&quot;, 180218,
 &quot;T3&quot;, 180218,
 &quot;TodayBusinessFunding.com&quot;, 180218,
 &quot;WEFUND.COM&quot;, 180218,
 &quot;WEFUNDEDTHEM.COM&quot;, 180218,
 &quot;workingcapitaldept.com (no tracking)&quot;, 180218,
 &quot;workingcapitaldept.com&quot;, 180218,
 NULL)</formula>
        <label>Call Path - Opener</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Call_Path_Other__c</fullName>
        <description>Checks Campaign Source and populates Call Path ID if matched.</description>
        <formula>CASE( Campaign_Source__c,
 &quot;Silver Rock Funding&quot;, 180208,

 &quot;ACD: Blue Global Sureclick Recycle (Belize)&quot;, 180230,
 &quot;ACD: Blue Global-SC 10-30&quot;, 180230,
 &quot;ACD: Blue Global-SC 30-75&quot;, 180230,
 &quot;NLFCash.com(SureBusMailer)&quot;, 180230,
 &quot;SureClick&quot;, 180230,

 &quot;Credit Karma&quot;, 179748,

 &quot;LendingTreePreQual&quot;, 180080,

 &quot;MCC Transactions&quot;, 179796,
 &quot;NATIONAL BENEFIT PROGRAMS&quot;, 179796,

 &quot;NYSRA&quot;, 180022,

 &quot;BizFi&quot;, 179528,
 &quot;MCC BizFi&quot;, 179528,

 &quot;XERO&quot;, 180124,

 &quot;Nav Direct&quot;, 179874,

 &quot;Nav Marketplace&quot;, 180010,
 &quot;Nav Referral&quot;, 180010,

 &quot;PROSPER2&quot;, 179666,
 &quot;Prosper&quot;, 179666, 
 NULL)</formula>
        <label>Call Path - Other</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CampaignSourceISO_1LeadSourceMatch__c</fullName>
        <description>Checks to see if the Campaign Source of the lead matches the Account Name that populates ISO #1 / Lead Source.</description>
        <formula>IF (CONTAINS(LOWER(Campaign_Source__c), LOWER(MCACE__ISO_1__r.Name)), TRUE, FALSE)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CampaignSourceISO#1LeadSourceMatch</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Campaign_Source__c</fullName>
        <description>The source of the campaign.</description>
        <label>Campaign Source</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Chosen_Pre_Approvals__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Chosen Pre-Approvals</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Closed_Converted_Date_Time__c</fullName>
        <label>Closed - Converted Date/Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Closed_Future_Client_Date_Time__c</fullName>
        <label>Closed - Future Client Date/Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Closed_Lost_Date_Time__c</fullName>
        <label>Closed - Lost Date/Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Closed_Unqualified_Duplicate_Date_Time__c</fullName>
        <label>Closed - Unqualified Duplicate Date/Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Collateral_Amount__c</fullName>
        <label>Collateral Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Collateral_Type__c</fullName>
        <label>Collateral Type</label>
        <length>160</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Collateral__c</fullName>
        <label>Collateral?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Contracted_Amount__c</fullName>
        <label>Contracted Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Counts_Against_Pipeline__c</fullName>
        <formula>AND(NOT(IsConverted), NOT(OR(ISPICKVAL(Status, &quot;Closed - Future Client&quot;), ISPICKVAL(Status, &quot;Closed - Lost&quot;), ISPICKVAL(Status, &quot;Closed - Converted&quot;), ISPICKVAL(Status, &quot;Closed - Unqualified&quot;))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Counts Against Pipeline</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Coupon_Tracking_Code__c</fullName>
        <label>Coupon Tracking Code</label>
        <length>160</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Date_Business_Established__c</fullName>
        <label>Date Business Established</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Days_in_Attempting_to_Contact__c</fullName>
        <formula>ROUND((NOW() - Open_Attempting_Contact_Date_Time__c), 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Days in Attempting to Contact</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Days_since_Reassigned_to_Rep_48_Hr_Rule__c</fullName>
        <description>Used for the 48 hour rule.</description>
        <formula>ROUND((NOW() - Reassigned_to_Rep_48_Hr_Rule_Date_Time__c), 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Days since Reassigned to Rep-48 Hr Rule</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Device__c</fullName>
        <label>Device</label>
        <picklist>
            <picklistValues>
                <fullName>Desktop</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mobile</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tablet</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>DupRefLeadCampaign__c</fullName>
        <label>DupRefLeadCampaign</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DupRefLeadCompany__c</fullName>
        <label>DupRefLeadCompany</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DupRefLeadID__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>DupRefLeadID</label>
        <referenceTo>Lead</referenceTo>
        <relationshipLabel>Duplicate Leads</relationshipLabel>
        <relationshipName>Leads</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>DupRefLeadLink__c</fullName>
        <label>DupRefLeadLink</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DupRefOppAccount__c</fullName>
        <label>DupRefOppAccount</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DupRefOppCampaign__c</fullName>
        <label>DupRefOppCampaign</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DupRefOppID__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>DupRefOppID</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Duplicate Leads</relationshipLabel>
        <relationshipName>Leads</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>DupRefOppLink__c</fullName>
        <label>DupRefOppLink</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Duplicate_Reason__c</fullName>
        <label>Duplicate Reason</label>
        <picklist>
            <picklistValues>
                <fullName>Active Lead Timed Out</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Matched to recent Active Lead</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Matched to recent Inactive Lead</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Matched to Funded Opportunity</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Matched to Contracted Opportunity</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Matched to existing Submitted Opportunity</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Matched to recent Application</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Inactive Lead Timed Out</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Matched to recent Dead Opportunity</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Existing Merchant</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Expected_Daily_Payment__c</fullName>
        <label>Expected Daily Payment</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>External_Id__c</fullName>
        <label>External Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Federal_Tax_ID__c</fullName>
        <description>Enter the Federal Tax ID of the merchant.</description>
        <inlineHelpText>Enter the Federal Tax ID of the merchant.</inlineHelpText>
        <label>Federal Tax ID#</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>First_Sent_to_InsideSales_Date_Time__c</fullName>
        <label>First Sent to InsideSales Date/Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>GCLID__c</fullName>
        <label>GCLID</label>
        <length>160</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ID_Geotrace__c</fullName>
        <label>ID Geotrace</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>ID_Owner_1_Address__c</fullName>
        <label>ID Owner 1 Address</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>ID_Owner_1_Alert_List__c</fullName>
        <label>ID Owner 1 Alert List</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>ID_Owner_1_Bankruptcy__c</fullName>
        <defaultValue>false</defaultValue>
        <label>ID Owner 1 Bankruptcy</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ID_Owner_1_DOB__c</fullName>
        <label>ID Owner 1 DOB</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>ID_Owner_1_Email__c</fullName>
        <label>ID Owner 1 Email</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>ID_Owner_1_General__c</fullName>
        <label>ID Owner 1 General</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>ID_Owner_1_PA__c</fullName>
        <label>ID Owner 1 PA</label>
        <picklist>
            <picklistValues>
                <fullName>DOB Match</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DOB Does Not Match</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DOB Not Available</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>ID_Owner_1_Pass_Fail__c</fullName>
        <label>ID Owner 1 Pass/Fail</label>
        <picklist>
            <picklistValues>
                <fullName>Pass</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fail</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Partial</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not Found</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>ID_Owner_1_Phone__c</fullName>
        <label>ID Owner 1 Phone</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>ID_Owner_1_SSN__c</fullName>
        <label>ID Owner 1 SSN</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>ID_Owner_1_Score__c</fullName>
        <label>ID Owner 1 Score</label>
        <picklist>
            <picklistValues>
                <fullName>High Risk</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Medium Risk</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Low Risk</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>ID_Owner_2_Address__c</fullName>
        <label>ID Owner 2 Address</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>ID_Owner_2_Alert_List__c</fullName>
        <label>ID Owner 2 Alert List</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>ID_Owner_2_Bankruptcy__c</fullName>
        <defaultValue>false</defaultValue>
        <label>ID Owner 2 Bankruptcy</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ID_Owner_2_DOB__c</fullName>
        <label>ID Owner 2 DOB</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>ID_Owner_2_Email__c</fullName>
        <label>ID Owner 2 Email</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>ID_Owner_2_General__c</fullName>
        <label>ID Owner 2 General</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>ID_Owner_2_PA__c</fullName>
        <label>ID Owner 2 PA</label>
        <picklist>
            <picklistValues>
                <fullName>DOB Match</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DOB Does Not Match</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DOB Not Available</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>ID_Owner_2_Pass__c</fullName>
        <label>ID Owner 2 Pass/Fail</label>
        <picklist>
            <picklistValues>
                <fullName>Pass</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fail</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Partial</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not Found</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>ID_Owner_2_Phone__c</fullName>
        <label>ID Owner 2 Phone</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>ID_Owner_2_SSN__c</fullName>
        <label>ID Owner 2 SSN</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>ID_Owner_2_Score__c</fullName>
        <label>ID Owner 2 Score</label>
        <picklist>
            <picklistValues>
                <fullName>High Risk</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Medium Risk</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Low Risk</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>ID_Owner_3_Address__c</fullName>
        <label>ID Owner 3 Address</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>ID_Owner_3_Alert_List__c</fullName>
        <label>ID Owner 3 Alert List</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>ID_Owner_3_Bankruptcy__c</fullName>
        <defaultValue>false</defaultValue>
        <label>ID Owner 3 Bankruptcy</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ID_Owner_3_DOB__c</fullName>
        <label>ID Owner 3 DOB</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>ID_Owner_3_Email__c</fullName>
        <label>ID Owner 3 Email</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>ID_Owner_3_General__c</fullName>
        <label>ID Owner 3 General</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ID_Owner_3_PA__c</fullName>
        <label>ID Owner 3 PA</label>
        <picklist>
            <picklistValues>
                <fullName>DOB Match</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DOB Does Not Match</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DOB Not Available</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>ID_Owner_3_Pass_Fail__c</fullName>
        <label>ID Owner 3 Pass/Fail</label>
        <picklist>
            <picklistValues>
                <fullName>Pass</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fail</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Partial</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not Found</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>ID_Owner_3_Phone__c</fullName>
        <label>ID Owner 3 Phone</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>ID_Owner_3_SSN__c</fullName>
        <label>ID Owner 3 SSN</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>ID_Owner_3_Score__c</fullName>
        <label>ID Owner 3 Score</label>
        <picklist>
            <picklistValues>
                <fullName>High Risk</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Medium Risk</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Low Risk</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>ID_Owner_4_Pass_Fail__c</fullName>
        <label>ID Owner 4 Pass/Fail</label>
        <picklist>
            <picklistValues>
                <fullName>Pass</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fail</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Partial</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not Found</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Industry_Type__c</fullName>
        <label>Industry Type</label>
        <length>160</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Initially_Unqualified__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Initially Unqualified</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Inside_Sales_Answer_Date_Time__c</fullName>
        <label>Inside Sales Answer Date/Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Inside_Sales_Answer__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Inside Sales Answer</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Inside_Sales_Unanswered_Date_Time__c</fullName>
        <label>Inside Sales Unanswered Date/Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Inside_Sales_Unanswered__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Inside Sales Unanswered</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_API_Lead__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is API Lead</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Belize_Lead__c</fullName>
        <formula>CONTAINS ( Campaign_Source__c , &quot;Belize&quot; )</formula>
        <label>Is Belize Lead</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Judgements_Liens__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Judgements/Liens</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Landlord_Contact_Name__c</fullName>
        <label>Landlord Contact Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Landlord_Mortgagee__c</fullName>
        <label>Landlord/Mortgagee</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Landlord_Phone__c</fullName>
        <label>Landlord Phone #</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Last_Page_Completed__c</fullName>
        <label>Last Page Completed</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lazarus_ID_DTS__c</fullName>
        <label>Lazarus ID DTS</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Lazarus_ID__c</fullName>
        <label>Lazarus ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lead_ID__c</fullName>
        <label>Lead ID</label>
        <length>20</length>
        <type>Text</type>
    </fields>
</CustomObject>